<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kalkulator</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="digit_zero">0</string>
    <string name="sign_plus">+</string>
    <string name="sign_minus">-</string>
    <string name="sign_multiply">*</string>
    <string name="sign_divide">/</string>
    <string name="sign_equal">=</string>
    <string name="bakspace">COFNIJ</string>
    <string name="clear">WYCZYŚĆ</string>
    <string name="coma">.</string>
    <string name="sign_plus_minus">±</string>
    <string name="error_divide_by_0">Dziel. przez 0!</string>
    <string name="night_mode">Tryb nocny</string>
    <string name="standard">Standardowy</string>
    <string name="about">O programie</string>
    <string name="author_name">Mateusz Sędkowski 202290</string>
    <string name="index">202290</string>
    <string name="author" tools:ignore="Typos">Autor : </string>
    <string name="version_number">1.0.1</string>
    <string name="version">Wersja : </string>
    <string name="back">Powrót</string>
    <string name="title_activity_advence_calculator">Zaawansowany</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="tangens">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="pow2">x^2</string>
    <string name="powX">x^y</string>
</resources>